--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="control-group">
                         <label>Первый взнос</label>
                         <input type="text" id="handsel" value="" data-slider-min="30"
-                               data-slider-max="80" data-slider-step="1" data-slider-value="50"
+                               data-slider-max="" data-slider-step="1" data-slider-value="50"
                                data-slider-orientation="horizontal" data-slider-selection="after"
                                data-slider-tooltip="hide">
 
