Добавлена кнопка удаления

--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 			<table class='offers-comparison'>
 				<tr class='offer-name'>
 					<th></th>
-					<td>Кредит А</td>
-					<td>Кредит Б</td>
-					<td>Кредит В</td>
+					<td>Кредит А<a href="#" class="delete-offer"></a></td>
+					<td>Кредит Б<a href="#" class="delete-offer"></a></td>
+					<td>Кредит В<a href="#" class="delete-offer"></a></td>
 				</tr>
 				<tr class='offer-sum'>
 					<th>Сумма кредита</th>
