--- a/index.html
+++ b/index.html
@@ -49,38 +49,36 @@
 
 <div class="container">
 
-<form class="form-inline">
+    <form class="form-inline">
 
-    <h4>Выбор автомобиля</h4>
-    <select id="car-company" class="input-medium"
-            ng-model="car.companyId"
-            ng-change="updateCompany()">
-        <option value="">Марка</option>
-        <option>DMC</option>
-        <option>Ваз</option>
-        <option>Nissan</option>
-    </select>
+        <h4>Выбор автомобиля</h4>
+        <select class="input-medium"
+                ng-model="car.companyId"
+                ng-options="carCompany as carCompany.name for carCompany in carCompanyList track by carCompany.id"
+                ng-change="updateCompany()">
+            <option value="">Марка</option>
+        </select>
 
-    <select class="input-medium" ng-model="car.modelId"
-            ng-options="carModel as carModel.name for carModel in carModelList track by carModel.id"
-            ng-change="updateModel()"
-            >
-        <option value="">Модель</option>
-    </select>
+        <select class="input-medium" ng-model="car.modelId"
+                ng-options="carModel as carModel.name for carModel in carModelList track by carModel.id"
+                ng-change="updateModel()"
+                >
+            <option value="">Модель</option>
+        </select>
 
-    <select class="input-medium" ng-model="car.modifId"
-            ng-options="carModif as carModif.name for carModif in carModifList track by carModif.id"
-            ng-change="updateModif()"
-            >
-        <option value="">Модификация</option>
-    </select>
+        <select class="input-medium" ng-model="car.modifId"
+                ng-options="carModif as carModif.name for carModif in carModifList track by carModif.id"
+                ng-change="updateModif()"
+                >
+            <option value="">Модификация</option>
+        </select>
 
-    <select class="input-medium" ng-model="car.yearId"
-            ng-options="carYear as carYear.name for carYear in carYearList track by carYear.id"
-            ng-change="updateYear()"
-            >
-        <option value="">Год</option>
-    </select>
+        <select class="input-medium" ng-model="car.yearId"
+                ng-options="carYear as carYear.name for carYear in carYearList track by carYear.id"
+                ng-change="updateYear()"
+                >
+            <option value="">Год</option>
+        </select>
 
 
 				<span class="btn-group" data-toggle="buttons-radio">
@@ -88,176 +86,148 @@
 					 <button type="button" class="btn" value="need">С пробегом</button>
 				</span>
 
-</form>
+    </form>
 
+    <h4>Подбор кредитных программ</h4>
 
-<div class="prices">
+    <div class="row-fluid">
+        <div class="span4">
 
-    <label class="checkbox">
-        <input type="checkbox" ng-model="car.osago" ng-true-value="3100" ng-false-value=" 0 ">ОСАГО
-        <span class="component-price">+3100 руб.</span>
-    </label>
+            <div class="control-group">
+                <label>Стоимость машины</label>
 
-    <label class="checkbox">
-        <input type="checkbox" ng-model="car.casco" ng-true-value="10570" ng-false-value=" 0 ">КАСКО
-        <span class="component-price">+10570 руб.</span>
-    </label>
-</div>
+                <div slider min="250000" max="3000000" step="10000" ng-model="car.price"></div>
 
+                <input type="text" class="input-mini" ng-model="car.price" >руб.
 
-<h4>Подбор кредитных программ</h4>
-
-<div class="row-fluid">
-    <div class="span3">
-
-        <div class="control-group">
-            <label>Стоимость машины</label>
-
-            <div slider min="250000" max="3000000" step="10000" ng-model="car.price"></div>
-
-            <input type="text" class="input-mini" ng-model="car.price">руб.
-
-        </div>
-
-    </div>
-
-
-
-    <div class="span3">
-
-        <div class="control-group">
-            <label>Первоначальный взнос</label>
-
-            <div slider min="30" max="" step="1" ng-model="initialPayment"></div>
-
-            <input type="text" style="width:20px" ng-model="initialPayment">%
-            <span>{{(initialPayment * car.price/100) | currency}}</span>
-            <!--input type="text" id="handsel-money-input" class="input-mini" ng-model="initialPayment">руб.-->
-
-        </div>
-    </div>
-
-    <div class="span3">
-
-        <div class="control-group">
-            <label>Ежемесячный платеж</label>
-
-            <div slider min="5000" max="200000" step="1000" ng-model="monthPayment"></div>
-
-            <input type="text" class="input-mini" ng-model="monthPayment">руб.
-
-        </div>
-
-    </div>
-
-    <div class="span3">
-        <div class="control-group">
-            <label>Срок</label>
-
-            <div slider min="3" max="36" step="1" ng-model="months"></div>
-
-            <input type="text" ng-model="months" style="width:20px"> мес.
-
-        </div>
-    </div>
-
-</div>
-
-<h4>Варианты программ</h4>
-
-<div class="row-fluid credit-offers">
-
-    <div class="span3" ng-repeat="offer in currentOfferList">
-        <div class="credit-offer">
-            <div class='flip-container'>
-                <div class='terms-container'>
-                    <div class='main-terms'>
-                        <span class="monthly-payment">42 000 <small>руб/мес</small></span>
-
-                        <h3>Кредит А</h3>
-
-
-                        <h5>Опции</h5>
-
-                        <div class='options-list'>
-                            <label class="checkbox"><input type="checkbox"/>Страхование</label>
-                            <label class="checkbox"><input type="checkbox"/>Без штрафов</label>
-                        </div>
-
-                        <a class='rotate' href='#'></a>
-                    </div>
-                    <div class="extra-terms">
-			<h5>Дополнительная информация</h5>
-
-                        пыщь-пыщь
-
-                        <a class='rotate' href='#'></a>
-                    </div>
-                </div>
             </div>
 
-            <button class='btn add-to-compare' ng-click="addToSelectedOfferList($index)">Добавить к сравнению</button>
         </div>
+
+
+        <div class="span4">
+
+            <div class="control-group">
+                <label>Первоначальный взнос</label>
+
+                <div slider min="30" max="" step="1" ng-model="initialPayment"></div>
+
+                <input type="text" style="width:20px" ng-model="initialPayment">%
+                <span>{{(initialPayment * car.price/100) | currency}}</span>
+                <!--input type="text" id="handsel-money-input" class="input-mini" ng-model="initialPayment">руб.-->
+
+            </div>
+        </div>
+
+        <div class="span4">
+            <div class="control-group">
+                <label>Срок</label>
+
+                <div slider min="3" max="36" step="1" ng-model="months"></div>
+
+                <input type="text" ng-model="months" style="width:20px"> мес.
+
+            </div>
+        </div>
+
     </div>
 
+    <h4>Варианты программ</h4>
 
-</div>
+    <div class="row-fluid credit-offers">
 
-<div ng-show="1">
-    <h4>Сравнение вариантов</h4>
+        <div class="span3" ng-repeat="offer in currentOfferList">
+            <div class="credit-offer" ng-controller="FlipCtrl">
+                <div class="flip-container ng-class: {'hover': isFlip}">
 
-    <table class='offers-comparison'>
-        <tr class='offer-name'>
-            <td>&nbsp;</td>
-            <td ng-repeat="selectedOffer in selectedOfferList">Кредит А<a href="" class="delete-offer"
-                                                                          ng-click="removeFromSelectedOfferList($index)"></a>
-            </td>
-        </tr>
-        <tr class='offer-sum'>
-            <th>Сумма кредита</th>
-            <td ng-repeat="selectedOffer in selectedOfferList">800 000 руб.</td>
-        </tr>
-        <tr class='offer-term'>
-            <th>Срок кредита</th>
-            <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>12 мес</td>
-        </tr>
-        <tr class='offer-return'>
-            <th>Сумма к возврату</th>
-            <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>320 000 руб.</td>
-        </tr>
+                    <div class='terms-container'>
+                        <div class='main-terms'>
+                            <span class="monthly-payment">42 000 <small>руб/мес</small></span>
+
+                            <h3>Кредит А</h3>
 
 
-        <tr class='group'>
-            <th>Требования к заемщику</th>
-            <td ng-repeat="selectedOffer in selectedOfferList"></td>
-        </tr>
+                            <h5>Опции</h5>
 
-        <tr>
-            <th>Гражданство РФ</th>
-            <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/yes.png"/></td>
-        </tr>
+                            <div class='options-list'>
+                                <label class="checkbox"><input type="checkbox"/>Страхование</label>
+                                <label class="checkbox"><input type="checkbox"/>Без штрафов</label>
+                            </div>
 
-        <tr>
-            <th>Домашний телефон</th>
-            <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/no.png"/></td>
-        </tr>
+                            <a class='rotate' ng-click="flip()"></a>
+                        </div>
+                        <div class="extra-terms">
+                            <h5>Дополнительная информация</h5>
 
-        <tr>
-            <th>Мобильный телефон</th>
-            <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/no.png"/></td>
-        </tr>
-		
-		
-		<tr>
-			<th></th>
-			<td ng-repeat="selectedOffer in selectedOfferList">
-				<button class='btn'>Оформить</button>
-			</td>
-		</tr>
+                            пыщь-пыщь
 
-    </table>
-</div>
+                            <a class='rotate' ng-click="flip()"></a>
+                        </div>
+                    </div>
+                </div>
 
+                <button class='btn add-to-compare' ng-click="addToSelectedOfferList($index)">Добавить к сравнению
+                </button>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div ng-show="1">
+        <h4>Сравнение вариантов</h4>
+
+        <table class='offers-comparison'>
+            <tr class='offer-name'>
+                <td>&nbsp;</td>
+                <td ng-repeat="selectedOffer in selectedOfferList">Кредит А<a href="" class="delete-offer"
+                                                                              ng-click="removeFromSelectedOfferList($index)"></a>
+                </td>
+            </tr>
+            <tr class='offer-sum'>
+                <th>Сумма кредита</th>
+                <td ng-repeat="selectedOffer in selectedOfferList">800 000 руб.</td>
+            </tr>
+            <tr class='offer-term'>
+                <th>Срок кредита</th>
+                <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>12 мес</td>
+            </tr>
+            <tr class='offer-return'>
+                <th>Сумма к возврату</th>
+                <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>320 000 руб.</td>
+            </tr>
+
+
+            <tr class='group'>
+                <th>Требования к заемщику</th>
+                <td ng-repeat="selectedOffer in selectedOfferList"></td>
+            </tr>
+
+            <tr>
+                <th>Гражданство РФ</th>
+                <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/yes.png"/></td>
+            </tr>
+
+            <tr>
+                <th>Домашний телефон</th>
+                <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/no.png"/></td>
+            </tr>
+
+            <tr>
+                <th>Мобильный телефон</th>
+                <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/no.png"/></td>
+            </tr>
+
+
+            <tr>
+                <th></th>
+                <td ng-repeat="selectedOffer in selectedOfferList">
+                    <button class='btn'>Оформить</button>
+                </td>
+            </tr>
+
+        </table>
+    </div>
 
 
 </div>
@@ -274,20 +244,13 @@
 <script type="text/javascript" src="js/angular/angular.js"></script>
 <script type="text/javascript" src="js/angular/i18n/angular-locale_ru.js"></script>
 <script type="text/javascript" src="js/angular/angular-resource.js"></script>
+<script type="text/javascript" src="js/ui-utils/ui-utils.min.js"></script>
+
 <script type="text/javascript" src="js/app/app.js"></script>
 <script type="text/javascript" src="js/app/controllers.js"></script>
 <script type="text/javascript" src="js/app/directives.js"></script>
 <script type="text/javascript" src="js/app/services.js"></script>
 
-<script type="text/javascript">
-
-    $(".terms-container .rotate").click(function () {
-        $(this).parent().parent().parent().toggleClass('hover');
-        return false;
-    })
-
-
-</script>
 
 </body>
 </html>
