--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="container">
 
-    <form class="form-inline">
+    <form class="form-inline" ng-controller="CarConfigurationCtrl">
 
         <h4>Выбор автомобиля</h4>
         <select class="input-medium"
@@ -87,146 +87,148 @@
 				</span>
 
     </form>
+    <div ng-controller="LoanProgramSelectionCtrl">
+        <h4>Подбор кредитных программ</h4>
 
-    <h4>Подбор кредитных программ</h4>
+        <div class="row-fluid">
+            <div class="span4">
 
-    <div class="row-fluid">
-        <div class="span4">
+                <div class="control-group">
+                    <label>Стоимость машины</label>
 
-            <div class="control-group">
-                <label>Стоимость машины</label>
+                    <div slider min="250000" max="3000000" step="10000" ng-model="car.price"></div>
 
-                <div slider min="250000" max="3000000" step="10000" ng-model="car.price"></div>
+                    <input type="text" class="input-mini" ng-model="car.price">руб.
 
-                <input type="text" class="input-mini" ng-model="car.price" >руб.
-
-            </div>
-
-        </div>
-
-
-        <div class="span4">
-
-            <div class="control-group">
-                <label>Первоначальный взнос</label>
-
-                <div slider min="30" max="" step="1" ng-model="initialPayment"></div>
-
-                <input type="text" style="width:20px" ng-model="initialPayment">%
-                <span>{{(initialPayment * car.price/100) | currency}}</span>
-                <!--input type="text" id="handsel-money-input" class="input-mini" ng-model="initialPayment">руб.-->
-
-            </div>
-        </div>
-
-        <div class="span4">
-            <div class="control-group">
-                <label>Срок</label>
-
-                <div slider min="3" max="36" step="1" ng-model="months"></div>
-
-                <input type="text" ng-model="months" style="width:20px"> мес.
-
-            </div>
-        </div>
-
-    </div>
-
-    <h4>Варианты программ</h4>
-
-    <div class="row-fluid credit-offers">
-
-        <div class="span3" ng-repeat="offer in currentOfferList">
-            <div class="credit-offer" ng-controller="FlipCtrl">
-                <div class="flip-container ng-class: {'hover': isFlip}">
-
-                    <div class='terms-container'>
-                        <div class='main-terms'>
-                            <span class="monthly-payment">42 000 <small>руб/мес</small></span>
-
-                            <h3>Кредит А</h3>
-
-
-                            <h5>Опции</h5>
-
-                            <div class='options-list'>
-                                <label class="checkbox"><input type="checkbox"/>Страхование</label>
-                                <label class="checkbox"><input type="checkbox"/>Без штрафов</label>
-                            </div>
-
-                            <a class='rotate' ng-click="flip()"></a>
-                        </div>
-                        <div class="extra-terms">
-                            <h5>Дополнительная информация</h5>
-
-                            пыщь-пыщь
-
-                            <a class='rotate' ng-click="flip()"></a>
-                        </div>
-                    </div>
                 </div>
 
-                <button class='btn add-to-compare' ng-click="addToSelectedOfferList($index)">Добавить к сравнению
-                </button>
             </div>
+
+
+            <div class="span4">
+
+                <div class="control-group">
+                    <label>Первоначальный взнос</label>
+
+                    <div slider min="0" max="car.price" step="car.price/100" ng-model="initialPayment"></div>
+
+                    <input type="text" style="width:20px" ng-model="initialPayment">%
+                    <span>{{initialPaymentPercent | currency}}</span>
+                    <!--input type="text" id="handsel-money-input" class="input-mini" ng-model="initialPayment">руб.-->
+
+                </div>
+            </div>
+
+            <div class="span4">
+                <div class="control-group">
+                    <label>Срок</label>
+
+                    <div slider min="3" max="36" step="1" ng-model="months"></div>
+
+                    <input type="text" ng-model="months" style="width:20px"> мес.
+
+                </div>
+            </div>
+
         </div>
 
+        <h4>Варианты программ</h4>
 
-    </div>
+        <div class="row-fluid credit-offers">
 
-    <div ng-show="1">
-        <h4>Сравнение вариантов</h4>
+            <div class="span3" ng-repeat="offer in currentOfferList">
+                <div class="credit-offer" ng-controller="FlipCtrl">
+                    <div class="flip-container ng-class: {'hover': isFlip}">
 
-        <table class='offers-comparison'>
-            <tr class='offer-name'>
-                <td>&nbsp;</td>
-                <td ng-repeat="selectedOffer in selectedOfferList">Кредит А<a href="" class="delete-offer"
-                                                                              ng-click="removeFromSelectedOfferList($index)"></a>
-                </td>
-            </tr>
-            <tr class='offer-sum'>
-                <th>Сумма кредита</th>
-                <td ng-repeat="selectedOffer in selectedOfferList">800 000 руб.</td>
-            </tr>
-            <tr class='offer-term'>
-                <th>Срок кредита</th>
-                <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>12 мес</td>
-            </tr>
-            <tr class='offer-return'>
-                <th>Сумма к возврату</th>
-                <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>320 000 руб.</td>
-            </tr>
+                        <div class='terms-container'>
+                            <div class='main-terms'>
+                                <span class="monthly-payment">42 000 <small>руб/мес</small></span>
+
+                                <h3>Программа : {{offer.id}}</h3>
+                                <h3>Ставка    : {{offer.rate}}</h3>
 
 
-            <tr class='group'>
-                <th>Требования к заемщику</th>
-                <td ng-repeat="selectedOffer in selectedOfferList"></td>
-            </tr>
+                                <h5>Опции</h5>
 
-            <tr>
-                <th>Гражданство РФ</th>
-                <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/yes.png"/></td>
-            </tr>
+                                <div class='options-list'>
+                                    <label class="checkbox"><input type="checkbox"/>Страхование</label>
+                                    <label class="checkbox"><input type="checkbox"/>Без штрафов</label>
+                                </div>
 
-            <tr>
-                <th>Домашний телефон</th>
-                <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/no.png"/></td>
-            </tr>
+                                <a class='rotate' ng-click="flip()"></a>
+                            </div>
+                            <div class="extra-terms">
+                                <h5>Дополнительная информация</h5>
 
-            <tr>
-                <th>Мобильный телефон</th>
-                <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/no.png"/></td>
-            </tr>
+                                пыщь-пыщь
+
+                                <a class='rotate' ng-click="flip()"></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <button class='btn add-to-compare' ng-click="addToSelectedOfferList($index)">Добавить к сравнению
+                    </button>
+                </div>
+            </div>
 
 
-            <tr>
-                <th></th>
-                <td ng-repeat="selectedOffer in selectedOfferList">
-                    <button class='btn'>Оформить</button>
-                </td>
-            </tr>
+        </div>
 
-        </table>
+        <div ng-show="1">
+            <h4>Сравнение вариантов</h4>
+
+            <table class='offers-comparison'>
+                <tr class='offer-name'>
+                    <td>&nbsp;</td>
+                    <td ng-repeat="selectedOffer in selectedOfferList">Кредит А<a href="" class="delete-offer"
+                                                                                  ng-click="removeFromSelectedOfferList($index)"></a>
+                    </td>
+                </tr>
+                <tr class='offer-sum'>
+                    <th>Сумма кредита</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList">800 000 руб.</td>
+                </tr>
+                <tr class='offer-term'>
+                    <th>Срок кредита</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>12 мес</td>
+                </tr>
+                <tr class='offer-return'>
+                    <th>Сумма к возврату</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>320 000 руб.</td>
+                </tr>
+
+
+                <tr class='group'>
+                    <th>Требования к заемщику</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList"></td>
+                </tr>
+
+                <tr>
+                    <th>Гражданство РФ</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/yes.png"/></td>
+                </tr>
+
+                <tr>
+                    <th>Домашний телефон</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/no.png"/></td>
+                </tr>
+
+                <tr>
+                    <th>Мобильный телефон</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList"><img src="img/no.png"/></td>
+                </tr>
+
+
+                <tr>
+                    <th></th>
+                    <td ng-repeat="selectedOffer in selectedOfferList">
+                        <button class='btn'>Оформить</button>
+                    </td>
+                </tr>
+
+            </table>
+        </div>
     </div>
 
 
