--- a/index.html
+++ b/index.html
@@ -112,9 +112,8 @@
 
                     <div slider min="0" max="100" step="1" ng-model="initialPaymentPercent"></div>
 
-                    <input type="text" style="width:20px" ng-model="initialPaymentPercent">%
-                    <span>{{initialPayment | currency}}</span>
-                    <!--input type="text" id="handsel-money-input" class="input-mini" ng-model="initialPayment">руб.-->
+                    <span style="width:20px">{{initialPaymentPercent | number}}%</span>
+                    <input type="text" id="handsel-money-input" class="input-mini" ng-model="initialPayment">руб.
 
                 </div>
             </div>
