fix multiply addition of one offer

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<tr>
 							<td>
 								<label>Первоначальный взнос</label>
-								<div slider min="30" max="90" step="1" ng-model="initialPaymentPercent"></div>
+								<div slider min="0" max="car.price" step="10000" ng-model="initialPayment"></div>
 							</td>
 							
 							
