--- a/index.html
+++ b/index.html
@@ -164,10 +164,14 @@
 
         <h4>Варианты программ</h4>
 
+		<div>
+			<p>Программы не найдены, попробуйте другие условия.</p>
+		</div>
+		
         <div class="row-fluid credit-offers">
 
             <div class="span3" ng-repeat="offer in currentOfferList">
-                <div class="credit-offer" ng-controller="FlipCtrl">
+                <div class="credit-offer" ng-controller="FlipCtrl">						
                     <div class="flip-container ng-class: {'hover': isFlip}">
 
                         <div class='terms-container'>
@@ -322,6 +326,10 @@
                     </td>
                 </tr>
                 <tr class='offer-sum'>
+                    <th>Ежемесячный платеж</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList">800 000 руб./мес.</td>
+                </tr>
+                <tr class='offer-sum'>
                     <th>Сумма кредита</th>
                     <td ng-repeat="selectedOffer in selectedOfferList">800 000 руб.</td>
                 </tr>
@@ -331,6 +339,15 @@
                 </tr>
                 <tr class='offer-return'>
                     <th>Сумма к возврату</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>{{offer.creditValue | currency}}</td>
+                </tr>
+                <tr class='offer-return'>
+                    <th>Сумма переплаты</th>
+                    <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>{{offer.creditValue | currency}}</td>
+                </tr>
+				
+                <tr class='offer-return'>
+                    <th>Стоимость доп. сервисов</th>
                     <td ng-repeat="selectedOffer in selectedOfferList" class='offer-sum'>{{offer.creditValue | currency}}</td>
                 </tr>
 
