--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
 
         <h4>Варианты программ</h4>
 
-		<div>
+		<div class="row-fluid" ng-show="currentOfferList.length==0">
 			<p>Программы не найдены, попробуйте другие условия.</p>
 		</div>
 		
-        <div class="row-fluid credit-offers">
+        <div class="row-fluid credit-offers" ng-show="currentOfferList.length > 0">
 
             <div class="span3" ng-repeat="offer in currentOfferList">
                 <div class="credit-offer" ng-controller="FlipCtrl">						
@@ -315,7 +315,7 @@
 
         </div>
 
-        <div ng-show="1">
+        <div ng-show="selectedOfferList.length>0" class="row-fluid">
             <h4>Сравнение вариантов</h4>
 
             <table class='offers-comparison'>
@@ -389,16 +389,15 @@
 <!-- /container -->
 
 
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/jquery/jquery-1.10.1.min.js"></script>
+<script type="text/javascript" src="js/bootstrap/bootstrap.min.js"></script>
 
 
-<!--script src="http://www.eyecon.ro/bootstrap-slider/js/bootstrap-slider.js"></script -->
-<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script type="text/javascript" src="js/jquery/jquery-ui.min.js"></script>
 
-<script type="text/javascript" src="js/angular/angular.js"></script>
+<script type="text/javascript" src="js/angular/angular.min.js"></script>
 <script type="text/javascript" src="js/angular/i18n/angular-locale_ru.js"></script>
-<script type="text/javascript" src="js/angular/angular-resource.js"></script>
+<script type="text/javascript" src="js/angular/angular-resource.min.js"></script>
 <script type="text/javascript" src="js/ui-utils/ui-utils.min.js"></script>
 
 <script type="text/javascript" src="js/app/app.js"></script>
