--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 			
 			
 			<div class="span3">	Год
-				<select size="7"  class="input-medium" ng-model="car.year"
-						ng-options="year.year for year in selYearList"
+				<select size="7"  class="input-medium" ng-model="car.yearId"
+						ng-options="year.yearId as year.yearId for year in selYearList"
 						>
 						<option value="">Любой</option>
 				</select>
