--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html xmlns:ng="http://angularjs.org" id="ng-app" lang="ru" ng-app="seedApp" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>RCI Calculator</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
