--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="#"><img src="img/neoflex-logo.png"/>&nbsp;&nbsp;Кредитный калькулятор</a>
+            <a class="brand" href="#"><img src="img/neoflex-logo.png"/>&nbsp;&nbsp;Супер Кредитный калькулятор</a>
 
             <div class="buttons">
                 <a href="#" class="btn"><i class="icon-briefcase"></i>&nbsp;Сохранить</a>
