search and select from catalog updated

--- a/index.html
+++ b/index.html
@@ -68,26 +68,59 @@
 <section class="car-choose">
     <h2>Автомобиль</h2>
 
-    <a href="">Новый</a>
-    <a href="">С пробегом</a>
+    <a href="" class="btn ng-class: {'active': !car.used}" ng-click="car.used=false;updateMark()" >Новый</a>
+    <a href="" class="btn ng-class: {'active': car.used}" ng-click="car.used=true;updateMark()" >С пробегом</a>
 
-    <a href="">Каталог</a>
-    <a href="">Поиск</a>
+    <a href="" ng-click="isCatalog=true" >Каталог</a>
+    <a href="" ng-click="isCatalog=false" >Поиск</a>
 
-    <section class="car-catalog">
-        <select></select><!--Марка-->
-        <select></select><!--Модель-->
-        <select></select><!--Комплектация-->
-        <select></select><!--Год-->
+    <section class="car-catalog" ng-show="isCatalog" >
+        <select ng-model="car.markId"
+                ng-options="mark.id as mark.name for mark in selMarkList"
+                ng-change="updateModel()"
+                >
+            <option value="">Любая</option>
+        </select><!--Марка-->
+        <select ng-model="car.modelId"
+                ng-options="model.id as model.name for model in selModelList"
+                ng-change="updatePackaging()"
+                >
+            <option value="">Любая</option>
+        </select><!--Модель-->
+        <select ng-model="car.packagingId"
+                ng-options="pack.id as pack.name for pack in selPackagingList"
+                ng-change="updateYear()"
+                >
+            <option value="">Любая</option>
+        </select><!--Комплектация-->
+        <select ng-model="car.yearId"
+                ng-options="year.yearId as year.yearId for year in selYearList"
+                >
+            <option value="">Любой</option>
+        </select><!--Год-->
     </section>
 
 
-    <section class="car-search">
+    <section class="car-search" ng-show="!isCatalog" >
         <div slider></div>
         <!--сумма-->
-        <select></select><!--Марка-->
-        <select></select><!--Модель-->
-        <select></select><!--Год-->
+        <select ng-model="car.markId"
+                ng-options="mark.id as mark.name for mark in selMarkList"
+                ng-change="updateModel()"
+                >
+            <option value="">Любая</option>
+        </select><!--Марка-->
+        <select ng-model="car.modelId"
+                ng-options="model.id as model.name for model in selModelList"
+                ng-change="updatePackaging()"
+                >
+            <option value="">Любая</option>
+        </select><!--Модель-->
+        <select ng-model="car.yearId"
+                ng-options="year.yearId as year.yearId for year in selYearList"
+                >
+            <option value="">Любой</option>
+        </select><!--Год-->
 
         <section class="car-list">
             <ul>
@@ -372,8 +405,6 @@
 
 
 <script type="text/javascript" src="js/jquery/jquery-1.10.1.min.js"></script>
-<!--<script type="text/javascript" src="js/jquery/jquery-1.6.2.min.js"></script>-->
-
 
 <script type="text/javascript" src="js/jquery/jquery-ui.min.js"></script>
 
@@ -389,7 +420,6 @@
 <script type="text/javascript" src="js/app/controllers.js"></script>
 <script type="text/javascript" src="js/app/directives.js"></script>
 <script type="text/javascript" src="js/app/services.js"></script>
-
 
 </body>
 </html>
