--- a/indexBackup.html
+++ b/indexBackup.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 
-    <link href="css/main.css" rel="stylesheet" media="screen">
+    <link href="css/mainBackup.css" rel="stylesheet" media="screen">
     <link href="css/print.css" rel="stylesheet" media="print">
 
 
